Add placeholders for the question #9